--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-responsive-grid-layout</title>
+    <title>vue-dynamic-grids</title>
   </head>
   <body>
     <style>
       html, body {margin: 0; padding: 0; min-width: 100%;width: 100%;min-height: 100%;height: 100%;}
     </style>
     <noscript>
-      <strong>We're sorry but vue-responsive-grid-layout doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but vue-dynamic-grids doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
   </body>
